--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -56,6 +56,7 @@ PageTitleShoppingList=Shopping List
 PageTitleViewPartyProfile=View Party Profile
 PageTitleViewPartyRole=View Party Roles
 PageTitleViewVendorParty=View Vendor Party Info
+PageTitleEditPartyRelationships=Edit Party Relationships
 PageTitleEditPartyTaxInfos=Edit Party Tax Info
 PageTitleVisitDetail=Visit Detail
 PageTitleVisitList=Visit List
