Added 'As Of' Ui Label
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5193 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -65,6 +65,7 @@ AccountingCreatePaymentPermissionError=Security Error: To Create a Payment you m
 AccountingCreatePermissionError=Security Error: to run createGlAccount you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission<br>
 AccountingCreditCard=Credit Card
 AccountingCurrency=Currency
+AccountingDataExchange=DataExchange
 AccountingDate=Date
 AccountingDateFilter=Date Filter
 AccountingDebitCreditMustEqual=Debit and Credit Totals must be equal to post to GL.
@@ -155,6 +156,8 @@ AccountingPaymentPreferenceId=Payment Preference Id
 AccountingPayments=Payments
 AccountingPaymentsFound=Payment(s) Found
 AccountingPaymentsMenu=Payments
+AccountingPaymentsReceived=Payments received
+AccountingPaymentsSend=Payments send
 AccountingPaymentType=Payment Type
 AccountingPleaseSendPaymentTo=Please Send Payment To:
 AccountingPrefixCard=Prefix on Card
@@ -209,3 +212,4 @@ isNotClosed=NOT CLOSED
 TimePeriod=Time Period
 ByTimePeriod=By Time Period
 ByDate=By Date
+AsOf=As Of
