Converted viewprofile page to use the screen widget; also applied patch from Jira #OFBIZ-305 to add links to sent/received payments, originally from Hans Bakker extracted and sent by Si Chen
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5196 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -12,6 +12,8 @@ AccountingCreditCard=Credit Card
 AccountingEditGiftCard=Edit Gift Card
 AccountingGiftCard=Gift Card
 AccountingPinNumber=Pin Number
+AccountingPaymentsReceived=Payments Received
+AccountingPaymentsSent=Payments Sent
  
 contactmechservices.could_not_create_contact_info_id_generation_failure=ERROR: Could not create contact info (id generation failure).
 contactmechservices.service_createContactMech_not_be_used_for_POSTAL_ADDRESS=This service (createContactMech) should not be used for POSTAL_ADDRESS type ContactMechs, use the createPostalAddress service.
