Added some ui label improvements from Jean-Luc Malet; Jira #OFBIZ-294
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5199 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -35,13 +35,15 @@ CommonAddDefault=Add Default
 CommonAddId=Add ID
 CommonAddNew=Add New
 CommonAddProblem=Add Problem
+CommonAddress1=Adresse 1
+CommonAddress2=Adresse 2
 CommonAddressLine=Address Line
 CommonAddresses=Addresses
 CommonAll=All
 CommonAllDay=All Day
 CommonAllMethods=All methods
-CommonAllWeek=All Week
 CommonAllowSolicitation=(allow solicitation?)
+CommonAllWeek=All Week
 CommonAmount=Amount
 CommonAnd=And
 CommonAny=Any
@@ -79,6 +81,7 @@ CommonCity=City
 CommonClear=Clear
 CommonClickHere=Click Here
 CommonClose=Close
+CommonCloseTab=+
 CommonComingSoon=Coming Soon!
 CommonComment=Comment
 CommonComments=Comments
@@ -173,6 +176,7 @@ CommonJune=June
 CommonLanguageTitle=Language
 CommonLarge=Large
 CommonLastUpdated=Last Updated
+CommonLine=Line
 CommonList=List
 CommonListAll=List All
 CommonLogin=Login
@@ -181,6 +185,7 @@ CommonLogout=Logout
 CommonLookup=Lookup
 CommonMain=Main
 CommonManager=Manager
+CommonMany=Many
 CommonMarch=March
 CommonMatched=Matched
 CommonMay=May
@@ -203,17 +208,18 @@ CommonNext=Next
 CommonNo=No
 CommonNoAddress=No Address
 CommonNoContactInformationOnFile=No contact information on file
+CommonNoContains=No Contains
 CommonNoElementFound=No element found
-CommonNoParent=No Parent
-CommonNoTaskAssigned=No tasks currently require your attention.
 CommonNone=None
+CommonNoParent=No Parent
 CommonNot=Not
+CommonNoTaskAssigned=No tasks currently require your attention.
+CommonNote=Note
+CommonNotes=Notes
 CommonNotModifRecreat=cannot change without re-creating
 CommonNotSet=Not Set
 CommonNotYetImplemented=Not yet implemented
 CommonNotYou=Not You
-CommonNote=Note
-CommonNotes=Notes
 CommonNovember=November
 CommonNow=Now
 CommonOctober=October
@@ -221,6 +227,7 @@ CommonOf=of
 CommonOn=On
 CommonOpenNewWindow=Open in New Window
 CommonOpenPageNewWindow=open page in new window
+CommonOpenTab=+
 CommonOptions=Options
 CommonOr=OR
 CommonOrder=Order
@@ -266,9 +273,9 @@ CommonSearch=Search
 CommonSearchResultfor=Search Results for
 CommonSecurity=Security
 CommonSelectAll=Select All
-CommonSelectOne=Select One
 CommonSelected=selected
 CommonSelection=Selection
+CommonSelectOne=Select One
 CommonSend=Send
 CommonSendDate=Send Date
 CommonSendEmail=send email
@@ -291,9 +298,9 @@ CommonState=State
 CommonStateProvince=State/Province
 CommonStats=Stats
 CommonStatus=Status
+CommonSubmit=Submit
 CommonSubTitle=Sub Title
 CommonSubTotal=Sub Total
-CommonSubmit=Submit
 CommonSubtotal=Subtotal
 CommonSunday=Sunday
 CommonTellAFriend=Tell-A-Friend
@@ -309,8 +316,8 @@ CommonThursday=Thursday
 CommonTime=Time
 CommonTitle=Title
 CommonTo=To
-CommonToName=To Name
 CommonToday=Today
+CommonToName=To Name
 CommonTotal=Total
 CommonTuesday=Tuesday
 CommonUnitPrice=Unit Price
@@ -324,11 +331,14 @@ CommonUsed=Used
 CommonUsedAs=Used as
 CommonUsername=Username
 CommonValidate=Validate
+CommonValidFromDate=Valid From Date
 CommonValidityProblem=Validity problem
+CommonValidThruDate=Valid Thru Date
 CommonValue=Value
 CommonView=View
 CommonViewCalendar=View Calendar
-CommonVolume=Volume
+CommonViewRequest=View Request
+CommonVolume=Volum
 CommonWednesday=Wednesday
 CommonWeek=Week
 CommonWelcome=Welcome
