A few bug fixes, plus a bunch of conversions to screen widget and various cleanups
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5207 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -44,7 +44,7 @@ OrderNewOrder=New Order
 OrderOrders=Orders
 PageTitleCreateNewPartyDetail=Create New Party Detail
 PageTitleEditCommunication=Edit Communication
-PageTitleEditcontactmech=Edit Contact Mech
+PageTitleEditContactMech=Edit Contact Mech
 PageTitleEditGiftCard=Edit Gift Card
 PageTitleEditSecurityGroup=Edit Security Group
 PageTitleEditSecurityGroupPermissions=Edit Security Group Permissions
@@ -53,6 +53,7 @@ PageTitleFindParty=Find Party(s)
 PageTitleListCommunications=List Communications
 PageTitleLogin=Login
 PageTitleMain=Main Page
+PageTitlePendingCommunications=Pending Communications
 PageTitleSecurityGroupsList=Security Groups List
 PageTitleShoppingList=Shopping List
 PageTitleViewPartyProfile=View Party Profile
@@ -119,12 +120,13 @@ PartyContentId=Content ID
 PartyCookie=Cookie
 PartyCountryCode=Country Code
 PartyCountryMissing=Country is missing
-PartyCreateAddWebSiteRolePermissionError=Security Error: to run addWebSiteRole you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
-PartyCreateCommunicationEventPermissionError=Security Error: to run createCommunicationEvent you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission 
-PartyCreateCommunicationEventPurposePermissionError=Security Error: to run createCommunicationEventPurpose you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
-PartyCreateCommunicationEventRolePermissionError=Security Error: to run createCommunicationEventRole you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
-PartyCreatePartyClassificationPermissionError=Security Error: to run createPartyClassification you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
-PartyCreatePostalAddressBoundaryPermissionError=Security Error: to run createPostalAddressBoundary you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyCreateAddWebSiteRolePermissionError=Security Error\: to run addWebSiteRole you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyCreateCommunicationEventPermissionError=Security Error\: to run createCommunicationEvent you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission 
+PartyCreateCommunicationEventPurposePermissionError=Security Error\: to run createCommunicationEventPurpose you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyCreateCommunicationEventRolePermissionError=Security Error\: to run createCommunicationEventRole you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyCreatePartyClassificationPermissionError=Security Error\: to run createPartyClassification you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyCreatePostalAddressBoundaryPermissionError=Security Error\: to run createPostalAddressBoundary you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyCreateVendorPermissionError=Security Error\: to run createVendor you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreateNewContact=Create New Contact Information
 PartyCreateNewCustomer=Create Customer
 PartyCreateNewEmployee=Create Employee
@@ -135,6 +137,7 @@ PartyCreateNewSecurityGroup=Create New SecurityGroup
 PartyCurrentShoppingCart=Current Shopping Cart 
 PartyCustomerRequest=Customer Request
 PartyCybersourceAvsOver=Cybersource AVS Override
+PartyDeleteVendorPermissionError=Security Error\: to run deleteVendor you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyDisabled=DISABLED
 PartyEditContactInformation=Edit Contact Information
 PartyEditSecurityGroupWithId=Edit Security Group With ID
@@ -181,6 +184,7 @@ PartyMaritalStatus=Marital Status
 PartyMechPurposeTypeNotFound=Purpose Type not found with ID
 PartyMemberRoles=Member Roles
 PartyMiddleInitial=Middle Initial
+PartyMgrCreatePermissionError=You do not have permission to view this page. ("PARTYMGR_CREATE" or "PARTYMGR_ADMIN" needed)
 PartyMgrViewPermissionError=You do not have permission to view this page. ("PARTYMGR_VIEW" or "PARTYMGR_ADMIN" needed)
 PartyMothersMaidenName=Mothers Maiden Name
 PartyMsgContactHavePurpose=Note: this new contact information will have the purpose
@@ -249,12 +253,12 @@ PartyQuantity=Quantity
 PartyQuantityPurchased=Quantity Purchased
 PartyQuickAddList=Quick Add To Shopping List
 PartyRelationships=Relationships
-PartyRemoveCommunicationEventPurposePermissionError=Security Error: to run removeCommunicationEventPurpose you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
-PartyRemoveCommunicationEventRolePermissionError=Security Error: to run removeCommunicationEventRole you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
-PartyRemovePartyClassificationPermissionError=Security Error: to run deletePartyClassification you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
-PartyRemovePartyRelationshipPermissionError=Security Error: to run removePartyRelationship you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
-PartyRemovePostalAddressBoundaryPermissionError=Security Error: to run deletePostalAddressBoundary you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
-PartyRemoveWebSiteRolePermissionError=Security Error: to run removeWebSiteRole you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
+PartyRemoveCommunicationEventPurposePermissionError=Security Error\: to run removeCommunicationEventPurpose you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
+PartyRemoveCommunicationEventRolePermissionError=Security Error\: to run removeCommunicationEventRole you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
+PartyRemovePartyClassificationPermissionError=Security Error\: to run deletePartyClassification you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
+PartyRemovePartyRelationshipPermissionError=Security Error\: to run removePartyRelationship you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
+PartyRemovePostalAddressBoundaryPermissionError=Security Error\: to run deletePostalAddressBoundary you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
+PartyRemoveWebSiteRolePermissionError=Security Error\: to run removeWebSiteRole you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
 PartyReply=Reply
 PartyReplyPrefix=RE:
 PartyRole=Role
@@ -301,8 +305,9 @@ PartyToName=To Name
 PartyTotal=Total
 PartyTotalYearsWorkNotValidNumber=Total Years Work Experience is not a valid number
 PartyType=Type
-PartyUpdateCommunicationEventPermissionError=Security Error: to run updateCommunicationEvent you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
-PartyUpdateWebSiteRolePermissionError=Security Error: to run updateWebSiteRole you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
+PartyUpdateCommunicationEventPermissionError=Security Error\: to run updateCommunicationEvent you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
+PartyUpdateVendorPermissionError=Security Error\: to run updateVendor you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyUpdateWebSiteRolePermissionError=Security Error\: to run updateWebSiteRole you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
 PartyURI=URI
 PartyUserCreated=User Created
 PartyUserLogin=User Login
@@ -313,7 +318,7 @@ PartyUserName=User Name(s)
 PartyUserNameMissing=Username is missing
 PartyVendor=Vendor
 PartyVendorInformation=Vendor Information
-PartyViewPostalAddressBoundaryPermissionError=Security Error: to run getPostalAddressBoundary you must have the PARTY_VIEW or PARTY_ADMIN permission
+PartyViewPostalAddressBoundaryPermissionError=Security Error\: to run getPostalAddressBoundary you must have the PARTY_VIEW or PARTY_ADMIN permission
 PartyVisits=Visits
 PartyVisitDetail=Visit Detail
 PartyVisitId=Visit Id
