Applied patches from Jean-Luc Malet and Jacques Le Roux for improved l10n; Jira #OFBIZ-297
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5214 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -63,6 +63,7 @@ CommonAttentionName=Attention Name
 CommonAttn=Attn
 CommonAugust=August
 CommonAvailable=Available
+CommonAverage=Average
 CommonBack=Back
 CommonBackTo=Back to
 CommonBackToList=Back To List
@@ -125,6 +126,7 @@ CommonEmailTo=Email To
 CommonEmailType=Email Type
 CommonEmails=Emails
 CommonEnabled=Enabled
+CommonEndDate=End date
 CommonEndDateTime=End Date/Time
 CommonEventDate=EventDate
 CommonExpire=Expire
@@ -164,6 +166,7 @@ CommonIdAlreadyExist=Id Already Exist
 CommonIdCode=ID Code
 CommonIdentifier=Identifier
 CommonIds=IDs
+CommonIn=In
 CommonInThe=In The
 CommonInformation=Information
 CommonInput=Input
@@ -213,6 +216,7 @@ CommonNoElementFound=No element found
 CommonNone=None
 CommonNoParent=No Parent
 CommonNot=Not
+CommonNotShown=Not Shown
 CommonNoTaskAssigned=No tasks currently require your attention.
 CommonNote=Note
 CommonNotes=Notes
@@ -243,6 +247,7 @@ CommonPrevious=Previous
 CommonPriority=Priority
 CommonProfile=Profile
 CommonProvince=Province
+CommonPublish=Publish
 CommonQualifier=Qualifier
 CommonQuantity=Quantity
 CommonQuarter=Quarter
@@ -252,6 +257,7 @@ CommonReady=Ready
 CommonReceive=Receive
 CommonReceived=Received
 CommonRed=Red
+CommonRefine=Refine
 CommonRefresh=Refresh
 CommonRegistred=Registered User
 CommonRejected=Rejected
@@ -299,12 +305,15 @@ CommonStateProvince=State/Province
 CommonStats=Stats
 CommonStatus=Status
 CommonSubmit=Submit
+CommonSubmitted=Submitted
 CommonSubTitle=Sub Title
 CommonSubTotal=Sub Total
 CommonSubtotal=Subtotal
 CommonSunday=Sunday
+CommonTally=Tally
 CommonTellAFriend=Tell-A-Friend
 CommonTest=Test
+CommonText=Text
 CommonTheFollowingErrorsOccurred=The following errors occurred
 CommonTheFollowingOccurred=The following occurred
 CommonTheOpenForBusinessProject=The Open For Business Project
@@ -315,8 +324,13 @@ CommonThruDateTime=Thru Date & Time
 CommonThursday=Thursday
 CommonTime=Time
 CommonTitle=Title
+CommonTitleDr=Dr.
+CommonTitleMr=Mr.
+CommonTitleMrs=Mrs.
+CommonTitleMs=Ms.
 CommonTo=To
 CommonToday=Today
+CommonToggle=Toggle
 CommonToName=To Name
 CommonTotal=Total
 CommonTuesday=Tuesday
@@ -327,6 +341,7 @@ CommonUpdate=Update
 CommonUpdateLink=Update link
 CommonUpdated=Updated
 CommonUpdatedEffectiveThru=Updated Effective Thru
+CommonUpload=Upload
 CommonUsed=Used
 CommonUsedAs=Used as
 CommonUsername=Username
@@ -348,6 +363,7 @@ CommonWidth=Width
 CommonWorkflowActivityUser=Workflow Activities Assigned to User
 CommonWorkflowActivityUserRole=Workflow Activities Assigned to User Role
 CommonY=Y
+CommonYear=Year
 CommonYes=Yes
 CommonYouremail=Your email
 CommonZipPostalCode=Zip/Postal Code
