Converted partymgr payment method jsps to screens, a few label cleanups too
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5219 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -21,6 +21,8 @@ AccountingAccountId=Account ID
 AccountingAccountLimit=Account Limit
 AccountingAccountNumber=Account Number
 AccountingAccountType=Account Type
+AccountingAddNewCreditCard=Add New Credit Card
+AccountingAddNewEftAccount=Add New EFT Account
 AccountingAgreement=Agreement
 AccountingAgreementItems=Agreement Items
 AccountingAgreements=Agreements
@@ -40,6 +42,7 @@ AccountingBillingAccountPayments=Billing Account Payments
 AccountingBillingAccounts=Billing Accounts
 AccountingBillingAcct=Billing Acct
 AccountingBilling=Billing
+AccountingBillingAddress=Billing Address
 AccountingBillingContactMechId=Billing Contact Mech
 AccountingBillingInformation=AccountingBilling Information
 AccountingBillUpTo=Bill-Up To
