--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -43,8 +43,11 @@ contactmechservices.could_not_delete_purpose_from_contact_mechanism_write=Could 
 OrderNewOrder=New Order
 OrderOrders=Orders
 PageTitleCreateNewPartyDetail=Create New Party Detail
+PageTitleEditAvsOverride=Edit AVS Override
 PageTitleEditCommunication=Edit Communication
 PageTitleEditContactMech=Edit Contact Mech
+PageTitleEditCreditCard=Edit Credit Card
+PageTitleEditEftAccount=Edit EFT Account
 PageTitleEditGiftCard=Edit Gift Card
 PageTitleEditSecurityGroup=Edit Security Group
 PageTitleEditSecurityGroupPermissions=Edit Security Group Permissions
