--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -72,6 +72,7 @@ CommonBenefit=Benefit
 CommonBy=By
 CommonCancel=Cancel
 CommonCancelAll=Cancel All
+CommonCancelDone=Cancel/Done
 CommonChange=Change
 CommonChecked=Checked
 CommonChecking=Checking
