--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -49,6 +49,8 @@ PageTitleEditContactMech=Edit Contact Mech
 PageTitleEditCreditCard=Edit Credit Card
 PageTitleEditEftAccount=Edit EFT Account
 PageTitleEditGiftCard=Edit Gift Card
+PageTitleEditGroupInformation=Edit Group Information
+PageTitleEditPersonalInformation=Edit Personal Information
 PageTitleEditSecurityGroup=Edit Security Group
 PageTitleEditSecurityGroupPermissions=Edit Security Group Permissions
 PageTitleEditSecurityGroupUserLogins=Edit Security Group UserLogins
