--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -139,6 +139,7 @@ PartyCreateNewParty=Create New Party Detail
 PartyCreateNewPartyGroup=Create New Party Group
 PartyCreateNewPerson=Create New Person
 PartyCreateNewSecurityGroup=Create New SecurityGroup
+PartyCreateUserLogin=Create UserLogin
 PartyCurrentShoppingCart=Current Shopping Cart 
 PartyCustomerRequest=Customer Request
 PartyCybersourceAvsOver=Cybersource AVS Override
