implemented edit order items and add (append) additional items to order; still need to add in some additional checking to make sure only orders not completed/cancelled can be edited. Tweaked up a few entry screens to correct the broken flow caused by no finalizeMode being passed (defaulted to 'customer' event)
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5233 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -48,6 +48,7 @@ OrderDate = Order Date
 OrderDateOrdered = Date Ordered
 OrderDesiredDeliveryDate = Desired Delivery Date
 OrderDestination = Destination
+OrderEditItems = Edit Items
 OrderEntryDate = Entry Date
 OrderFinalizeOrder = Finalize Order
 OrderFindOrder = Find Orders
@@ -217,11 +218,14 @@ OrderTotalSalesTax = Total Sales Tax
 OrderTotalShippingAndHandling = Total Shipping and Handling
 OrderTrackingNumber = Tracking Number
 OrderUnitList = Unit / List
+OrderUnitPrice = Unit Price
+OrderUpdateItems = Update Items
 OrderUseDefaultComment = Use as default comment for next entry
 OrderUseDefaultDesiredDeliveryDate = Use as default desired delivery date for next entry
 OrderViewEditDelivery = View/Delivery Schedule Info
 OrderViewEditDeliveryScheduleInfo = View/Edit Delivery Schedule Info
 OrderViewImage = View Image
+OrderViewOrder = View Order
 OrderViewPermissionError = You do not have permission to view this page. ("ORDERMGR_VIEW" or "ORDERMGR_ADMIN" needed)
 OrderWorkflow = Workflow
 PageTitleLogin = Login
