--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -54,7 +54,9 @@ PageTitleEditPersonalInformation=Edit Personal Information
 PageTitleEditSecurityGroup=Edit Security Group
 PageTitleEditSecurityGroupPermissions=Edit Security Group Permissions
 PageTitleEditSecurityGroupUserLogins=Edit Security Group UserLogins
+PageTitleEditUserLoginSecurityGroups=Edit UserLogin Security Groups
 PageTitleFindParty=Find Party(s)
+PageTitleFindSecurityGroup=Find Security Group
 PageTitleListCommunications=List Communications
 PageTitleLogin=Login
 PageTitleMain=Main Page
@@ -86,7 +88,7 @@ PartyAddRole=Add Role
 PartyAddrToName=To
 PartyAddToRole=Add To Role
 PartyAddToShoppingList=Add To Shopping List
-PartyAddUserLoginToSecurityGroup=Add UserLogin to this Security Group
+PartyAddUserLoginToSecurityGroup=Add UserLogin to Security Group
 PartyAvsString=AVS String
 PartyAreaCode=Area Code
 PartyAttentionName=Attention Name
