--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -50,6 +50,8 @@ PageTitleEditCreditCard=Edit Credit Card
 PageTitleEditEftAccount=Edit EFT Account
 PageTitleEditGiftCard=Edit Gift Card
 PageTitleEditGroupInformation=Edit Group Information
+PageTitleEditPartyRelationships=Edit Party Relationships
+PageTitleEditPartyTaxInfos=Edit Party Tax Info
 PageTitleEditPersonalInformation=Edit Personal Information
 PageTitleEditSecurityGroup=Edit Security Group
 PageTitleEditSecurityGroupPermissions=Edit Security Group Permissions
@@ -60,14 +62,13 @@ PageTitleFindSecurityGroup=Find Security Group
 PageTitleListCommunications=List Communications
 PageTitleLogin=Login
 PageTitleMain=Main Page
+PageTitleNewPartyNote=New Party Note
 PageTitlePendingCommunications=Pending Communications
 PageTitleSecurityGroupsList=Security Groups List
 PageTitleShoppingList=Shopping List
 PageTitleViewPartyProfile=View Party Profile
 PageTitleViewPartyRole=View Party Roles
 PageTitleViewVendorParty=View Vendor Party Info
-PageTitleEditPartyRelationships=Edit Party Relationships
-PageTitleEditPartyTaxInfos=Edit Party Tax Info
 PageTitleVisitDetail=Visit Detail
 PageTitleVisitList=Visit List
 
