Finished jsp conversions in the party manager; fixed ui label issue in lookup screens, plus various cleanups there; remove a bunch of no longer needed artifacts in the party manager; moved lookup decorator to the common component from content
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5248 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -166,6 +166,7 @@ PartyFirstNameMissing=Firstname is Missing
 PartyFollowSession=Follow Session 
 PartyGender=Gender
 PartyGotoList=Goto List
+PartyGroupName=Group Name
 PartyGroupNameMissing=Group Name is missing
 PartyHeight=Height
 PartyHeightNotValidNumber=Height is not a valid number
@@ -193,6 +194,7 @@ PartyMaritalStatus=Marital Status
 PartyMechPurposeTypeNotFound=Purpose Type not found with ID
 PartyMemberRoles=Member Roles
 PartyMiddleInitial=Middle Initial
+PartyMiddleName=Middle Name
 PartyMgrCreatePermissionError=You do not have permission to view this page. ("PARTYMGR_CREATE" or "PARTYMGR_ADMIN" needed)
 PartyMgrViewPermissionError=You do not have permission to view this page. ("PARTYMGR_VIEW" or "PARTYMGR_ADMIN" needed)
 PartyMothersMaidenName=Mothers Maiden Name
