added truition logout code
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5267 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/securityext/config/truition.properties
+++ b/applications/securityext/config/truition.properties
@@ -6,6 +6,9 @@
 # Is Truition Enabled (Y/N)
 truition.enabled=Y
 
+# Name of the Truition cookie
+truition.cookie.name=truition_cookie
+
 # Domain Name used by the cookie
 truition.domain.name=ofbiz.org
 
