Cleaned up and expanded the PartyClassification services
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5273 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -132,6 +132,7 @@ PartyCreateAddWebSiteRolePermissionError=Security Error\: to run addWebSiteRole 
 PartyCreateCommunicationEventPermissionError=Security Error\: to run createCommunicationEvent you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission 
 PartyCreateCommunicationEventPurposePermissionError=Security Error\: to run createCommunicationEventPurpose you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreateCommunicationEventRolePermissionError=Security Error\: to run createCommunicationEventRole you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyCreatePartyClassificationGroupPermissionError=Security Error\: to run createPartyClassificationGroup you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreatePartyClassificationPermissionError=Security Error\: to run createPartyClassification you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreatePostalAddressBoundaryPermissionError=Security Error\: to run createPostalAddressBoundary you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyCreateVendorPermissionError=Security Error\: to run createVendor you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
@@ -266,6 +267,7 @@ PartyQuickAddList=Quick Add To Shopping List
 PartyRelationships=Relationships
 PartyRemoveCommunicationEventPurposePermissionError=Security Error\: to run removeCommunicationEventPurpose you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
 PartyRemoveCommunicationEventRolePermissionError=Security Error\: to run removeCommunicationEventRole you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
+PartyRemovePartyClassificationGroupPermissionError=Security Error\: to run deletePartyClassificationGroup you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
 PartyRemovePartyClassificationPermissionError=Security Error\: to run deletePartyClassification you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
 PartyRemovePartyRelationshipPermissionError=Security Error\: to run removePartyRelationship you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
 PartyRemovePostalAddressBoundaryPermissionError=Security Error\: to run deletePostalAddressBoundary you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
@@ -317,7 +319,9 @@ PartyTotal=Total
 PartyTotalYearsWorkNotValidNumber=Total Years Work Experience is not a valid number
 PartyType=Type
 PartyUpdateCommunicationEventPermissionError=Security Error\: to run updateCommunicationEvent you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
-PartyUpdateVendorPermissionError=Security Error\: to run updateVendor you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
+PartyUpdatePartyClassificationGroupPermissionError=Security Error\: to run updatePartyClassificationGroup you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
+PartyUpdatePartyClassificationPermissionError=Security Error\: to run updatePartyClassification you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
+PartyUpdateVendorPermissionError=Security Error\: to run updateVendor you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
 PartyUpdateWebSiteRolePermissionError=Security Error\: to run updateWebSiteRole you must have the PARTYMGR_UPDATE or PARTYMGR_ADMIN permission
 PartyURI=URI
 PartyUserCreated=User Created
