--- a/framework/example/config/ExampleUiLabels.properties
+++ b/framework/example/config/ExampleUiLabels.properties
@@ -5,15 +5,5 @@ ExampleApplication=Example Application
 ExampleCompanyName=OFBiz\: Example
 ExampleCompanySubtitle=Part of the Open For Business Family of Open Source Software
 
-ExamplePermissionErrorCreateExample=Security Error\: to run createExample you must have the EXAMPLE_CREATE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorUpdateExample=Security Error\: to run updateExample you must have the EXAMPLE_UPDATE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorDeleteExample=Security Error\: to run deleteExample you must have the EXAMPLE_DELETE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorCreateExampleItem=Security Error\: to run createExampleItem you must have the EXAMPLE_CREATE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorUpdateExampleItem=Security Error\: to run updateExampleItem you must have the EXAMPLE_UPDATE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorDeleteExampleItem=Security Error\: to run deleteExampleItem you must have the EXAMPLE_DELETE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorCreateExampleFeature=Security Error\: to run createExampleFeature you must have the EXAMPLE_CREATE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorUpdateExampleFeature=Security Error\: to run updateExampleFeature you must have the EXAMPLE_UPDATE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorDeleteExampleFeature=Security Error\: to run deleteExampleFeature you must have the EXAMPLE_DELETE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorCreateExampleFeatureAppl=Security Error\: to run createExampleFeatureAppl you must have the EXAMPLE_CREATE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorUpdateExampleFeatureAppl=Security Error\: to run updateExampleFeatureAppl you must have the EXAMPLE_UPDATE or EXAMPLE_ADMIN permission
-ExamplePermissionErrorDeleteExampleFeatureAppl=Security Error\: to run deleteExampleFeatureAppl you must have the EXAMPLE_DELETE or EXAMPLE_ADMIN permission
+ExampleErrorNoExampleStatusValidChange=Error\: status change from [${lookedUpValue.statusId}] to [${parameters.statusId}] is not allowed.
+ExamplePermissionError=Security Error\: to run ${methodShortDescription} you must have the EXAMPLE${securityAction} or EXAMPLE_ADMIN permission
