Applied patch from Jacopo that implements case-insensitive searching/finding; Jira #OFBIZ-309
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5280 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/content/config/conditional.properties
+++ b/applications/content/config/conditional.properties
@@ -12,3 +12,4 @@ greater_than_from_day_start=Greater Than From Day Start
 less_than=Less Than
 up_to_day=Up To Day
 up_thru_day=Up Thru Day
+ignore_case=Ignore Case
