--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -27,6 +27,7 @@ AnyFeatureType=- Any -
 ApplyToAll=Apply To All
 CatalogCompanyName=OFBiz: Catalog Manager
 Categories=Categories
+CategoryUploadImage=Upload Category Image
 CommonSurveys=Surveys
 CommonVolume=Volume
 ContentHtmlBody=Html Body
@@ -198,6 +199,7 @@ ProductAddProductCategoryMemberFromDate=Add Product Category Member (select Cate
 ProductAddProductContentFromDate=Add Product Content (select Content Id, enter From Date):
 ProductAddProductFeatureFromCategory=Add Product Feature From Category or Group
 ProductAddProductFeatureFromGroup=Add Product Feature From Group
+ProductAddProductFeatureID=Add Product Feature with ID
 ProductAddProductFeatureTypeId=Add Product Feature with Type and ID Code
 ProductAddProductKeyword=Add product keyword
 ProductAddProductsUsingDefaultQuantities=Add Products in this Category to the Cart using Default Quantities
@@ -278,10 +280,12 @@ ProductCategoryImageUrl=Category Image URL
 ProductCategoryMembers=Category Members
 ProductCategoryNotFoundforCategoryID=Category not found for Category ID
 ProductCategoryPage=Category Page
+ProductCategoryProducts=Products from this category
 ProductCategoryRollupChildCategories=Category Rollup : Child Categories
 ProductCategoryRollupParentCategories=Category Rollup : Parent Categories
 ProductCategorySelectCategoryAndEnterFromDate=Category (select Category and enter fromDate)
 ProductCategory_Id=Category [ID]
+ProductChangeWithoutProductCatalog=This cannot be changed without re-creating the Product Catalog.
 ProductChargeShipping=Charge Shipping
 ProductCheckExisting=Check Existing
 ProductCheckInventory=Check Inventory
@@ -318,6 +322,7 @@ ProductCouldNotFindProductCategoryWithId=Could not Find Product Category with Id
 ProductCouldNotFindProductConfigItem=Could Not Find Product Config Item with ID
 ProductCountry=Country
 ProductCreateAProductFeatureCategory=Create a Product Feature Category
+ProductCreateInformationNewSupplier=Create information for new supplier
 ProductCreateNewCatalog=Create New Catalog
 ProductCreateNewCategory=Create New Category
 ProductCreateNewFacility=Create New Facility
@@ -332,6 +337,7 @@ ProductCreateNewProductPromo=Create New ProductPromo
 ProductCreateNewProductStore=Create New Product Store
 ProductCreatePicklist=Create Picklist
 ProductCreateProduct=Create Product
+ProductCreateProductFeatureGroup=Create a Product Feature Group
 ProductCreateProductFeatureInThisCategory=Create Product Feature in This Category
 ProductCreateProductInCategory=Create Product in Category
 ProductCreateProductInCategoryCheckExisting=Create Product in Category Check Existing
@@ -430,6 +436,8 @@ ProductFeatureAppls=Feature Appls
 ProductFeatureCategoriesGroups=Feature Categories and Groups
 ProductFeatureCategory=Feature Category
 ProductFeatureCats=Features
+ProductFeatureId=Feature Id
+ProductFeatureGroup=Feature Group
 ProductFeatureType=Feature Type
 ProductFeatures=Features
 ProductFile=File
@@ -456,6 +464,7 @@ ProductGlAccount=GL Account
 ProductGlAccounts=GL Accounts
 ProductGlobalPriceRule=Global Price Rule
 ProductGlobalPriceRules=Global Price Rules
+ProductGoToFeatureCategory=Go to Feature Category
 ProductGroupMemberMaintenance=Group Member Maintenance
 ProductGroupRollupChildGroups=Group Rollup : Child Groups
 ProductGroupSelectCategoryFromDate=Group (select Category and enter From Date)
@@ -566,6 +575,7 @@ ProductNewCategory=New Category
 ProductNewContactMech=New Contact Mech
 ProductNewFacility=New Facility
 ProductNewFacilityLocation=New Facility Location
+ProductNewFeatureType=New Feature Type
 ProductNewGroup=New Group
 ProductNewInventoryItem=New Inventory Item
 ProductNewItem=New Item
@@ -635,6 +645,8 @@ ProductNoteRequireEmailParty=NOTE: The Require Email Or Party flag is set to N (
 ProductNotifySale=Sale Price
 ProductNumberQuantity=Number / Quantity
 ProductOemPartyId=OEM Party ID
+ProductOemPartyName=Product OEM Name
+ProductOemProductId=ID at the manufacturer
 ProductOneInventoryFacility=One Inventory Facility
 ProductOnlyAppliesWithinSpan=only applies if within span
 ProductOptional=Optional
@@ -908,6 +920,8 @@ ProductSubTitle=Sub-Title
 ProductSubject=Subject
 ProductSubmit=Submit
 ProductSuppliers=Suppliers
+ProductSuppliersId=Suppliers Id
+ProductSupplierSpecificFeatureInformation=Supplier Specific Feature Information
 ProductSupportThruDate=Support Thru Date
 ProductTargetProductCategory=Target Product Category
 ProductTargetType=Target Type
