Added i18n/l10n patch from Malin Nicolas; Jira #OFBIZ-312
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5291 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -1,17 +1,22 @@
-# OFBiz UiLabel Properties used for the accounting module 
-#
 ####
+# OFBiz UiLabel Properties used for the accounting module 
+# Cette traduction a ete realisee par l'equipe de Nereide, societe specialisee dans l'integration de l'ERP OFBiz aupres des PME.
+# Si vous remarquez des erreurs ou des libelles incorrects, n'hesitez pas a nous en faire part : traductionOFBiz@nereide.biz
+#
+en=English
+fr=French
+de=Deutch
 
-AcctgGlPartyLabel=GL Party:
-AcctgGlAcctLabel=GL Account:
+AcctgGlPartyLabel=GL Party : 
+AcctgGlAcctLabel=GL Account : 
 AcctgEditGlJournalEntry=Journal Entry
 AcctgAssignGlAccount=Assign GL Account
 AcctgChartOfAcctsTabMenu=Chart of Accounts
 AcctgListGlAcctOrg=List GL Organization
 AcctgNavigateAccts=Navigate Accounts
-AcctgGlFiscalTypeLable=Fiscal Type:
-AcctgGlJrnlDescLabel=Description:
-AcctgGlJrnlIdLabel=GL Journal ID:
+AcctgGlFiscalTypeLable=Fiscal Type : 
+AcctgGlJrnlDescLabel=Description : 
+AcctgGlJrnlIdLabel=GL Journal ID : 
 AcctgGlJrnlIdToolTip=Non-editable System ID
 
 ListAccounts=List Gl Accounts
@@ -24,27 +29,32 @@ AccountingAccountType=Account Type
 AccountingAddNewCreditCard=Add New Credit Card
 AccountingAddNewEftAccount=Add New EFT Account
 AccountingAgreement=Agreement
+AccountingAgreementDate=Agreement Date
+AccountingAgreementId=Agreement Id
+AccountingAgreementItemSeqId=Agreement Item Seq Id
 AccountingAgreementItems=Agreement Items
-AccountingAgreements=Agreements
 AccountingAgreementTerms=Agreement Terms
+AccountingAgreementTermId=Agreement Term Id
+AccountingAgreementTypeId=Agreement Type Id
+AccountingAgreements=Agreements
 AccountingAmount=Amount
-AccountingAssets=Assets
 AccountingAnyInvoiceStatus=Any Invoice Status
 AccountingAnyPaymentMethod=Any Payment Method
 AccountingAnyPaymentStatus=Any Payment Status
-AccountingBankName=Bank Name
+AccountingAssets=Assets
 AccountingBalanceSheet=Balance Sheet
-AccountingBillingMenu=Billing Accounts
+AccountingBankName=Bank Name
+AccountingBilling=Billing
 AccountingBillingAccount=Billing Acct
 AccountingBillingAccountInvoices=Billing Account Invoices
 AccountingBillingAccountOnly=Pay With Billing Account Only
 AccountingBillingAccountPayments=Billing Account Payments
 AccountingBillingAccounts=Billing Accounts
 AccountingBillingAcct=Billing Acct
-AccountingBilling=Billing
 AccountingBillingAddress=Billing Address
 AccountingBillingContactMechId=Billing Contact Mech
 AccountingBillingInformation=AccountingBilling Information
+AccountingBillingMenu=Billing Accounts
 AccountingBillUpTo=Bill-Up To
 AccountingBothInvoiceIdBillingAccountIdEmptyError=Both invoiceId and billingAccountId cannot be empty
 AccountingCardNumber=Card Number
@@ -58,13 +68,13 @@ AccountingCompanySubtitle=Part of the Open For Business Family of Open Source So
 AccountingCreateBillingAccount=Create Billing Account
 AccountingCreateBillingAccountPermissionError=Security Error: to run createBillingAccount you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission <br>
 AccountingCreateBillingAccountRole=Create Billing Account Role
-AccountingCreateBillingAccountRolePermissionError=Security Error: to run createBillingAccountRole you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission
+AccountingCreateBillingAccountRolePermissionError=Security Error : to run createBillingAccountRole you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission
 AccountingCreateBillingAccountTerm=Create Billing Account Term
-AccountingCreateBillingAccountTermPermissionError=Security Error: to run createBillingAccountTerm you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission
+AccountingCreateBillingAccountTermPermissionError=Security Error : to run createBillingAccountTerm you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission
 AccountingCreateNewCreditCard=Create New Credit Card
 AccountingCreateNewEftAccount=Create New EFT Account
 AccountingCreatePayment=Create Payment
-AccountingCreatePaymentPermissionError=Security Error: To Create a Payment you must either be the to or from party or have the PAY_INFO_CREATE or PAY_INFO_ADMIN permissions.
+AccountingCreatePaymentPermissionError=Security Error : To Create a Payment you must either be the to or from party or have the PAY_INFO_CREATE or PAY_INFO_ADMIN permissions.
 AccountingCreatePermissionError=Security Error: to run createGlAccount you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission<br>
 AccountingCreditCard=Credit Card
 AccountingCurrency=Currency
@@ -72,7 +82,7 @@ AccountingDataExchange=DataExchange
 AccountingDate=Date
 AccountingDateFilter=Date Filter
 AccountingDebitCreditMustEqual=Debit and Credit Totals must be equal to post to GL.
-AccountingDeleteBillingAccountTermPermissionError=Security Error: to run removeBillingAccountTerm you must have the ACCOUNTING_DELETE or ACCOUNTING_ADMIN permission
+AccountingDeleteBillingAccountTermPermissionError=Security Error : to run removeBillingAccountTerm you must have the ACCOUNTING_DELETE or ACCOUNTING_ADMIN permission
 AccountingDescription=Description
 AccountingDueDate=Due Date
 AccountingEditPayment=Edit Payment
@@ -104,16 +114,16 @@ AccountingGlAcc=GL Account
 AccountingHideFields=Hide Fields
 AccountingIncomeStatement=Income Statement
 AccountingInformation=Information
+AccountingInvoice=Invoice
 AccountingInvoiceDate=Invoice Date
 AccountingInvoiceID=InvoiceID
-AccountingInvoice=Invoice
 AccountingInvoiceItem=Invoice Item
 AccountingInvoiceItems=Invoice Items
-AccountingInvoicesFound=Invoices Found
-AccountingInvoicesMenu=Invoices
-AccountingInvoices=Invoices
 AccountingInvoicePayments=Invoice Payments
 AccountingInvoiceTotal=Invoice Total
+AccountingInvoices=Invoices
+AccountingInvoicesFound=Invoices Found
+AccountingInvoicesMenu=Invoices
 AccountingLastNameCard=Last Name on Card
 AccountingLiabilities=Liabilities
 AccountingLineTotal=Line Total
@@ -147,10 +157,12 @@ AccountingNoPaymentMethods=There are no payment methods on file.
 AccountingNoPaymentsfound=No Payments found
 AccountingOfflinePayment=Offline Payment
 AccountingOrders=Orders
+AccountingPartyIdFrom=Party Id From
+AccountingPartyIdTo=Party Id To
 AccountingPartyMustBeInternalOrganization=Party must be an Internal Organization (set in PartyRole)
-AccountingPaymentDate=Payment Date
 AccountingPayment=Payment
 AccountingPaymentAlreadyReceived=Payment already received
+AccountingPaymentDate=Payment Date
 AccountingPaymentID=PaymentID
 AccountingPaymentInformation=Payment Information
 AccountingPaymentMethodId=Payment Method Id
@@ -165,31 +177,69 @@ AccountingPaymentType=Payment Type
 AccountingPleaseSendPaymentTo=Please Send Payment To:
 AccountingPrefixCard=Prefix on Card
 AccountingProduct=Product
+AccountingProductId=Product Id
 AccountingQuantity=Quantity
-AccountingReferenceNumber=Reference Number
 AccountingReceivePayment=Receive Payment
+AccountingReferenceNumber=Reference Number
 AccountingReports=Reports
+AccountingRoleTypeIdFrom=Role Type Id From
+AccountingRoleTypeIdTo=Role Type Id To
 AccountingRoutingNumber=Routing Number
 AccountingStatus=Status
 AccountingSuffixCard=Suffix on Card
+AccountingTermTypeId=Term Type Id
+AccountingTextData=Text Data
+AccountingThruDate=Thru Date
 AccountingToParty=To Party
 AccountingToPartyId=To Party Id
 AccountingTotal=Total
 AccountingType=Type
 AccountingUpdateAvailability=Update the availability
-AccountingUpdateBillingAccountPermissionError=Security Error: to run updateAcctgTrans you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission<br>
-AccountingUpdateBillingAccountRolePermissionError=Security Error: to run updateBillingAccountRole you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission
-AccountingUpdateBillingAccountTermPermissionError=Security Error: to run updateBillingAccountTerm you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission
+AccountingUpdateBillingAccountPermissionError=Security Error : to run updateAcctgTrans you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission<br>
+AccountingUpdateBillingAccountRolePermissionError=Security Error : to run updateBillingAccountRole you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission
+AccountingUpdateBillingAccountTermPermissionError=Security Error : to run updateBillingAccountTerm you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission
 AccountingUpdateBillingAccount=Update Billing Account
-AccountingUpdatePaymentPermissionError=Security Error: To Update a Payment you must either be the to or from party or have the PAY_INFO_UPDATE or PAY_INFO_ADMIN permissions.
+AccountingUpdatePaymentPermissionError=Security Error : To Update a Payment you must either be the to or from party or have the PAY_INFO_UPDATE or PAY_INFO_ADMIN permissions.
 AccountingViewPermissionError=You do not have permission to view this page. ("ACCOUNTING_VIEW" or "ACCOUNTING_ADMIN" needed)
+
+CommonAccounting=Accounting
+CommonAttn=Attn
+CommonCreateNew=Create New
+CommonEdit=Edit
+CommonFind=Find
+CommonFromDate=From Date
+CommonFrom=From
+CommonLogin=Login
+CommonLogout=Logout
+CommonMain=Main
+CommonNA=N/A
+CommonNext=Next
+CommonNotModifRecreat=Not Modifi Recreat
+CommonPassword=Password
+CommonPrevious=Previous
+CommonRegistred=Registred
+CommonRemove=Remove
+CommonSave=Save
+CommonSet=Set
+CommonShowLookupFields=Show Lookup Fields
+CommonSubmit=Submit
+CommonTest=Test
+CommonThruDate=Thru Date
+CommonThru=Thru
+CommonTo=To
+CommonUom=Uom
+CommonUpdate=Update
+CommonUsername=Username
+CommonValue=Value
+CommonView=View
+CommonWelcome=Welcome
 
 PageTitleEditBillingAccount=Edit Billing Account
 PageTitleEditBillingAccountInvoices=Edit Billing Account Invoices
-
 PageTitleEditBillingAccountPayments=Edit Billing Account Payments
 PageTitleEditBillingAccountRoles=Edit Billing Account Roles
 PageTitleEditBillingAccountTerms=Edit Billing Account Terms
+PageTitleEditGlAccount=Edit GL Account
 PageTitleEditGlobalGlAccount=Edit Global GL Account
 PageTitleFindBillingAccount=Find Billing Account(s)
 PageTitleFindGlobalGlAccount=Find Global GL Account
@@ -197,7 +247,6 @@ PageTitleLogin=Login
 PageTitleLookupFixedAsset=Lookup Fixed Asset
 PageTitleLookupProduct=Lookup Product
 PageTitleMain=Main Page
-
 PartyPartyId=Party ID
 PartyRoles=Roles
 PartyRoleTypeId=RoleType ID
