Added segment screens; thanks to Al Byers for his help with this
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5300 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -4,4 +4,29 @@
 ####
 
 # empty so far, everything in common UI labels
+SegmentGroupSegmentGroupId=Segment Group Id
+SegmentGroupSegmentGroupTypeId=Segment Group Type Id
+SegmentGroupDescription=Description
+SegmentGroupProductStoreId=Product Store Id
+SegmentGroupCreate=Create New Segment Group
+SegmentGroupClassCreate=Create New Segment Group Classification
+SegmentGroupGeoCreate=Create New Segment Group Geo
+SegmentGroupRoleCreate=Create New Segment Group Role
+PageTitleEditSegmentGroup=Edit Segment Group
+PageTitleFindSegmentGroup=Find Segment Group
+PageTitleListSegmentGroupClass=List Segment Group Classifications
+PageTitleEditSegmentGroupClass=Edit Segment Group Classification
+PageTitleListSegmentGroupGeo=List Segment Group Geos
+PageTitleEditSegmentGroupGeo=Edit Segment Group Geo
+PageTitleListSegmentGroupRole=List Segment Group Roles
+PageTitleEditSegmentGroupRole=Edit Segment Group Role
+SegmentGroupSegmentGroup=Segment
+SegmentGroupSegmentGroupType=Type
+SegmentGroupSegmentGroupClassification=Classification
+SegmentGroupSegmentGroupRole=Role
+SegmentGroupSegmentGroupGeo=Geo
+SegmentGroupSegmentGroupLookup=Find
+CommonDelete=Delete
+
+
 
